--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<div class="vid-container">
 			<video loop>
-				<source src="./video/rain1.mp4"  type="video/mp4">
+				<source src="./video/rain.mp4"  type="video/mp4">
 			</video>
 		</div>
 
@@ -38,9 +38,9 @@
 			<h3 class="time-display">0:00</h3>
 		</div>
 		<div class="sound-picker">
-			<button data-sound="./sounds/serenity-mix.mp3" data-video="./video/rain1.mp4">
+			<button data-sound="./sounds/serenity-mix.mp3" data-video="./video/rain.mp4">
 				<img src="./svg/rain.svg"></button>
-			<button data-sound="./sounds/beach.mp3"data-video="./video/beach1.mp4">
+			<button data-sound="./sounds/beach.mp3"data-video="./video/beach.mp4">
 				<img src="./svg/beach.svg">
 			</button>
 		</div>
