--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
-	<h1 style="font-family: verdana   ;color: white; text-align: center; margin-top: 2%;">Transcend into the Zen state</h1>
+	
+	<!--<h1 style="font-family: verdana;  text-align: center; margin-top: 2%;">Transcend into the Zen state</h1>-->
 
 	<div class="app">
 
-		<div class="vid-container">
+		<!--<div class="vid-container">
 			<video loop>
-				<source src="./video/rain.mp4"  type="video/mp4">
+				<source src="./video/rain1.mp4"  type="video/mp4">
 			</video>
-		</div>
+		</div>-->
 
 		<div class="time-select">
 			<button data-time="120">2 Minutes</button>
@@ -38,9 +39,9 @@
 			<h3 class="time-display">0:00</h3>
 		</div>
 		<div class="sound-picker">
-			<button data-sound="./sounds/serenity-mix.mp3" data-video="./video/rain.mp4">
+			<button id="button" data-sound="./sounds/serenity-mix.mp3" >
 				<img src="./svg/rain.svg"></button>
-			<button data-sound="./sounds/beach.mp3"data-video="./video/beach.mp4">
+			<button id="button" data-sound="./sounds/beach.mp3">
 				<img src="./svg/beach.svg">
 			</button>
 		</div>
